--- a/css/style.css
+++ b/css/style.css
@@ -884,14 +884,9 @@ footer {
 
 /* 모바일 화면에서 첫 번째 팝업만 표시 */
 @media screen and (max-width: 1023px) {
-    .popup__text__cont,
-    .popup__image__cont {
-        display: none !important;
-    }
-
     .popup__text__cont:first-child,
     .popup__image__cont:first-child {
-        display: block !important;
+        display: block;
     }
 }
 .popup__container {
@@ -1635,7 +1630,7 @@ input[type="checkbox"] {
     text-align: center;
     z-index: 1;
     max-width: 400px;
-    max-height: 560px;
+    max-height: 550px;
     width: 100%;
     height: 100%;
     position: relative;
