슬라이드 가로 수정

--- a/css/style.css
+++ b/css/style.css
@@ -2756,7 +2756,7 @@ select {
     .main__games {
     }
     .main__games a{
-        min-width: 200px;
+        /* min-width: 200px; */
     }
     .main__merit{
         gap: 10px;
